<resources>
    <string name="app_name">Walk It Up</string>
    <string name="welcome_to_step_game">Welcome To Walk It Up!</string>
    <string name="exercise_and_have_fun_doing_it"></string>
    <string name="username_field"></string>
    <string name="start">START</string>
    <string name="enter_your_name_below">Enter your name below</string>
    <string name="textview">Hi User!</string>
    <string name="home"></string>
    <string name="missions"></string>
    <string name="settings"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="steps">Steps:</string>
    <string name="distance_walked">Distance walked:</string>
    <string name="calories_burned">Calories burned: </string>
    <string name="stepsAmount">X</string>
    <string name="distanceAmount">Y</string>
    <string name="calorieAmount">Z</string>
    <string name="daily_missions">Daily</string>
    <string name="weekly_missions">Weekly</string>
    <string name="monthly_missions">Monthly</string>
    <string name="username">Username:</string>
    <string name="textviewUsername">TextView</string>
    <string name="button"></string>
    <string name="achievements"></string>
    <string name="units">Units:</string>
    <string name="gender">Gender:</string>
    <string name="name">Name</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="achievments"></string>
    <integer-array name="ages">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>60</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
    </integer-array>
</resources>