<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#454545"
    android:fitsSystemWindows="true"
    tools:context=".Homepage"
    >

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#9F000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIconTint="#0040FF"
        app:tabIndicatorColor="#0040FF"
        app:tabMode="fixed"
        app:tabPaddingEnd="10dp"
        app:tabPaddingStart="10dp"
        app:tabTextColor="#1572C3">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/missions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missions" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/achievments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/achievments" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.92"
        app:layout_constraintWidth_percent="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>