<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#454545"
    tools:context=".settings"
    android:screenOrientation="portrait">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="285dp"
        android:layout_height="67dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/single_line_border"
        android:text="Age"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/user"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/user"
        app:layout_constraintTop_toBottomOf="@+id/user" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/single_line_border"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameUsr"
        android:layout_width="168dp"
        android:layout_height="28dp"
        android:text="name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/user"
        app:layout_constraintEnd_toEndOf="@+id/user"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="@+id/user"
        app:layout_constraintTop_toTopOf="@+id/user"
        app:layout_constraintVertical_bias="0.536" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="285dp"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/single_line_border"
        android:text="@string/units"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="285dp"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/single_line_border"
        android:text="@string/gender"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="285dp"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/single_line_border"
        android:text="@string/weight"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="285dp"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/single_line_border"
        android:text="Step Dist:"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="145dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.611" />

    <Spinner
        android:id="@+id/stepdistspin"
        android:layout_width="145dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.611" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="145dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.388" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="145dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.444" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="145dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/unittv"
        android:layout_width="41dp"
        android:layout_height="31dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/spinner3"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/spinner3"
        app:layout_constraintTop_toTopOf="@+id/spinner3"
        app:layout_constraintVertical_bias="0.611" />

    <TextView
        android:id="@+id/unittv2"
        android:layout_width="41dp"
        android:layout_height="31dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/stepdistspin"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/stepdistspin"
        app:layout_constraintTop_toTopOf="@+id/stepdistspin"
        app:layout_constraintVertical_bias="0.555" />

</androidx.constraintlayout.widget.ConstraintLayout>